# crewai-monitor

./: .env.example  .gitignore  TESTING.md  docker-compose.yml  render.yaml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  alerts.py  auth.py  control.py  deps.py  ingest.py  query.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  alert.py  api_key.py  trace.py  usage.py  user.py
backend/app/services/: alerts.py  notifications.py  questdb.py  trace_service.py  trace_store.py
backend/app/worker/: __init__.py  alert_processor.py
backend/scripts/: init_db.py
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/alerts/: page.tsx
dashboard/src/app/dashboard/api-keys/: page.tsx
dashboard/src/app/dashboard/kill-switch/: page.tsx
dashboard/src/app/dashboard/live/: page.tsx
dashboard/src/app/dashboard/settings/: page.tsx
dashboard/src/app/dashboard/traces/: page.tsx
dashboard/src/app/dashboard/usage/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/register/: page.tsx
dashboard/src/components/: alerts-notifier.tsx
dashboard/src/components/ui/: badge.tsx  dialog.tsx  tabs.tsx  use-toast.ts
dashboard/src/lib/: api.ts  store.ts  utils.ts
demo/: simulated_crew.py
docs/: CrewAI_Monitor_Production_Guide.md
scripts/: setup_user.sh  test_live.py  test_sdk.py
sdk/: README.md  pyproject.toml
sdk/src/crewai_monitor/: __init__.py  buffer.py  client.py  collector.py  config.py  hooks.py
(+3 files in other folders)
