[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-monitor"
version = "0.1.0"
description = "Real-time monitoring, tracing, and kill switch for CrewAI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["crewai", "monitoring", "tracing", "agents", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.80.0",
    "pybreaker>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/crewai-monitor"
Documentation = "https://crewai-monitor.dev/docs"
Repository = "https://github.com/yourusername/crewai-monitor"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_monitor"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
